Exp-2/output/hf-eval-data-v3/f00041_highlight_entities.err
  File "./f00041_highlight_entities.py", line 49
    assert highlight_entities('Responsable des ventes, vous travaillerez au sein d'une équipe dynamique dans l'agence de Lyon.') == 'Responsable des ventes, vous travaillerez au sein d'une équipe dynamique dans l'agence de [Lyon].'
                                                                                   ^
SyntaxError: invalid syntax
